; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intel/ipw2x00/extr_ipw2100.c_write_nic_word.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intel/ipw2x00/extr_ipw2100.c_write_nic_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@IPW_REG_INDIRECT_ACCESS_ADDRESS = common dso_local global i32 0, align 4
@IPW_REG_INDIRECT_ADDR_MASK = common dso_local global i32 0, align 4
@IPW_REG_INDIRECT_ACCESS_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32, i32)* @write_nic_word to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_nic_word(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.net_device*, %struct.net_device** %4, align 8
  %8 = load i32, i32* @IPW_REG_INDIRECT_ACCESS_ADDRESS, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @IPW_REG_INDIRECT_ADDR_MASK, align 4
  %11 = and i32 %9, %10
  %12 = call i32 @write_register(%struct.net_device* %7, i32 %8, i32 %11)
  %13 = load %struct.net_device*, %struct.net_device** %4, align 8
  %14 = load i32, i32* @IPW_REG_INDIRECT_ACCESS_DATA, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @write_register_word(%struct.net_device* %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @write_register(%struct.net_device*, i32, i32) #1

declare dso_local i32 @write_register_word(%struct.net_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
